# bpflint

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  action.yml  build.rs  derivation.nix  flake.nix  lints.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build-cli.yml  deploy.yml  publish-cli.yml  publish.yml  test.yml  update-0.21.yml  update-0.22.yml  update-0.23.yml
cli/: CHANGELOG.md  Cargo.toml  USAGE.md
cli/src/: args.rs  main.rs
examples/: custom-lint.rs  task_longrun.bpf.c
lints/: README.md  bpf-loop.scm  bpf-loop.txt  core-read.scm  core-read.txt  get-current-task.scm  get-current-task.txt  perfbuf-usage.scm  perfbuf-usage.txt  pragma-unroll-for-loop-bounded.scm  probe-read.scm  probe-read.txt  unrolled-for-loop.scm  unstable-attach-point.scm  unstable-attach-point.txt  untyped-map-member.scm  untyped-map-member.txt
make/: Cargo.toml  make.rs
serve/: Cargo.toml  main.rs
src/: highlight.rs  lib.rs  lines.rs  lint.rs  report.rs  utils.rs
src/report/: ansi_color.rs  highlight.rs  mod.rs  terminal.rs
tests/: util.rs
tests/lints/: bpf-loop.rs  core-read.rs  get-current-task.rs  mod.rs  perfbuf-usage.rs  pragma-unroll-for-loop-bounded.rs  probe-read.rs  unrolled-for-loop.rs  unstable-attach-point.rs  untyped-map-member.rs  validate.rs
www/: index.html  styles.css  theme.css
